--- a/Voxa/Voxa.csproj
+++ b/Voxa/Voxa.csproj
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\PlanetFactory\packages\SharpFont.4.0.1\build\SharpFont.props" Condition="Exists('..\..\PlanetFactory\packages\SharpFont.4.0.1\build\SharpFont.props')" />
+  <Import Project="..\..\PlanetFactory\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props" Condition="Exists('..\..\PlanetFactory\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -28,6 +30,8 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -59,6 +63,9 @@
       <HintPath>..\packages\OpenTK.2.0.0\lib\net20\OpenTK.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SharpFont, Version=4.0.1.200, Culture=neutral, PublicKeyToken=48add4c483071cdf, processorArchitecture=MSIL">
+      <HintPath>..\..\PlanetFactory\packages\SharpFont.4.0.1\lib\net45\SharpFont.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -83,6 +90,7 @@
     <Compile Include="Objects\GameObject.cs" />
     <Compile Include="Logic\Game.cs" />
     <Compile Include="Objects\Renderer\SpriteRenderer.cs" />
+    <Compile Include="Objects\Renderer\TextRenderer.cs" />
     <Compile Include="Objects\Sprite.cs" />
     <Compile Include="Objects\StaticModel.cs" />
     <Compile Include="Objects\Transform.cs" />
@@ -98,9 +106,11 @@
     <Compile Include="Rendering\EngineWindow.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rendering\Font.cs" />
     <Compile Include="Rendering\RenderingPool.cs" />
     <Compile Include="Rendering\Shader.cs" />
     <Compile Include="Rendering\ShaderProgram.cs" />
+    <Compile Include="Rendering\TextVertex.cs" />
     <Compile Include="Rendering\Texture.cs" />
     <Compile Include="Rendering\SpriteVertex.cs" />
     <Compile Include="Rendering\TexturedVertex.cs" />
@@ -121,7 +131,7 @@
     <Compile Include="Primitives\Shape\Block.cs" />
     <Compile Include="Utils\GLTFParser.cs" />
     <Compile Include="Utils\Logger.cs" />
-    <Compile Include="Utils\MathExtensions.cs" />
+    <Compile Include="Utils\Extensions.cs" />
     <Compile Include="Utils\OpenGLDebugger.cs" />
     <Compile Include="Utils\OpenSimplexNoise.cs" />
     <Compile Include="Utils\ResourceManager.cs" />
@@ -131,6 +141,8 @@
     <None Include="App.config" />
     <EmbeddedResource Include="Assets\Shaders\SpriteFragmentShader.frag" />
     <EmbeddedResource Include="Assets\Shaders\SpriteShader.vert" />
+    <EmbeddedResource Include="Assets\Shaders\TextFragmentShader.frag" />
+    <EmbeddedResource Include="Assets\Shaders\TextShader.vert" />
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
     <EmbeddedResource Include="Assets\Shaders\BasicFragmentShader.frag" />
@@ -158,6 +170,13 @@
     <EmbeddedResource Include="Assets\Textures\WhitePixel.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\PlanetFactory\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\PlanetFactory\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props'))" />
+    <Error Condition="!Exists('..\..\PlanetFactory\packages\SharpFont.4.0.1\build\SharpFont.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\PlanetFactory\packages\SharpFont.4.0.1\build\SharpFont.props'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
