--- a/Voxa/packages.config
+++ b/Voxa/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="OpenTK" version="2.0.0" targetFramework="net452" />
+  <package id="SharpFont" version="4.0.1" targetFramework="net461" />
+  <package id="SharpFont.Dependencies" version="2.6" targetFramework="net461" />
 </packages>
