Add an UI framework and grid system

--- a/Voxa/Voxa.csproj
+++ b/Voxa/Voxa.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\PlanetFactory\packages\SharpFont.4.0.1\build\SharpFont.props" Condition="Exists('..\..\PlanetFactory\packages\SharpFont.4.0.1\build\SharpFont.props')" />
-  <Import Project="..\..\PlanetFactory\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props" Condition="Exists('..\..\PlanetFactory\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props')" />
+  <Import Project="..\..\Astrarium\packages\SharpFont.4.0.1\build\SharpFont.props" Condition="Exists('..\..\Astrarium\packages\SharpFont.4.0.1\build\SharpFont.props')" />
+  <Import Project="..\..\Astrarium\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props" Condition="Exists('..\..\Astrarium\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -63,8 +63,9 @@
       <HintPath>..\packages\OpenTK.2.0.0\lib\net20\OpenTK.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SharpFont, Version=4.0.1.200, Culture=neutral, PublicKeyToken=48add4c483071cdf, processorArchitecture=MSIL">
-      <HintPath>..\..\PlanetFactory\packages\SharpFont.4.0.1\lib\net45\SharpFont.dll</HintPath>
+    <Reference Include="SharpFont">
+      <HintPath>..\..\Astrarium\packages\SharpFont.4.0.1\lib\net45\SharpFont.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -94,6 +95,10 @@
     <Compile Include="Objects\Sprite.cs" />
     <Compile Include="Objects\StaticModel.cs" />
     <Compile Include="Objects\Transform.cs" />
+    <Compile Include="Objects\UI\ICanvas.cs" />
+    <Compile Include="Objects\UI\UIElement.cs" />
+    <Compile Include="Objects\UI\UIGrid.cs" />
+    <Compile Include="Objects\UI\UIText.cs" />
     <Compile Include="Primitives\Shape\IShapeDecorator.cs" />
     <Compile Include="Primitives\Shape\Plane.cs" />
     <Compile Include="Primitives\Shape\Sphere.cs" />
@@ -174,8 +179,8 @@
     <PropertyGroup>
       <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\PlanetFactory\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\PlanetFactory\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props'))" />
-    <Error Condition="!Exists('..\..\PlanetFactory\packages\SharpFont.4.0.1\build\SharpFont.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\PlanetFactory\packages\SharpFont.4.0.1\build\SharpFont.props'))" />
+    <Error Condition="!Exists('..\..\Astrarium\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Astrarium\packages\SharpFont.Dependencies.2.6\build\SharpFont.Dependencies.props'))" />
+    <Error Condition="!Exists('..\..\Astrarium\packages\SharpFont.4.0.1\build\SharpFont.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Astrarium\packages\SharpFont.4.0.1\build\SharpFont.props'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
